Unwrapping, First unwrap unwraps with LSCM, not with Angle Based #31426

Closed
opened 2012-05-12 14:24:15 +02:00 by Reiner Prokein · 4 comments

%%%r46549 Win 7, 64 Bit

Seems that Blender unwraps with Conformal method first at the moment. And not Angle based as preselected and shown in the settings.

How to reproduce: create a UV sphere. Mark a seam that goes through so that you have two half pieces. Unwrap. You will notice that the two resulting UV patches are not round as they should be with ABF. It`s the LSCM method. Switch to Conformal, and you will see that nothing will change in the result. Now choose Angle based again. And now you get two round results as it should be with ABF :)

Attached three screenshots and a file with an examplesphere that you just need to open, select all and unwrap.%%%

%%%r46549 Win 7, 64 Bit Seems that Blender unwraps with Conformal method first at the moment. And not Angle based as preselected and shown in the settings. How to reproduce: create a UV sphere. Mark a seam that goes through so that you have two half pieces. Unwrap. You will notice that the two resulting UV patches are not round as they should be with ABF. It`s the LSCM method. Switch to Conformal, and you will see that nothing will change in the result. Now choose Angle based again. And now you get two round results as it should be with ABF :) Attached three screenshots and a file with an examplesphere that you just need to open, select all and unwrap.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn46579.

Thanks for reporting! :)%%%

%%%Fixed in svn46579. Thanks for reporting! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks for fixing :)%%%

%%%Thanks for fixing :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31426
No description provided.