Fix [#31426] Unwrapping, First unwrap unwraps with LSCM, not with Angle Based

When operator method property is not set, the operator uses the one from current scene settings. We must update the operator property accordingly...

Also updated default startup.blend file, to match default AngleBased method (was on Conformal one).